# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

members = ["packages/*"]

[workspace.package]
version = "0.1.0"
authors = ["Nic McPhee", "Justus Flügel", "Many cool people on Twitch"]
description = "An evolutionary computation system in Rust"
documentation = "https://github.com/unhindered-ec/unhindered-ec"
repository = "https://github.com/unhindered-ec/unhindered-ec.git"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[profile.release]
debug = true

[workspace.dependencies]
clap = "4.5.1"
rand = "0.9.2"
num-traits = "0.2.18"
thiserror = "2.0.17"
itertools = "0.14.0"
macro_railroad_annotation = "1.1.0"
test-strategy = "0.4.3"
proptest = "1.9.0"
criterion = "0.7.0"
miette = "7.6.0"
test-case = "3.3.1"
polonius-the-crab = "0.5.0"
static_assertions = "1.1.0"

ec-core = { path = "packages/ec-core" }
ec-linear = { path = "packages/ec-linear" }
push = { path = "packages/push" }
push_macros = { path = "packages/push-macros" }
ec_macros = { path = "packages/ec-macros" }


[workspace.lints.clippy]
# Lint groups
# These have a priority of -1 to ensure that individual
# Lints override them, if present.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }

# Individual lints
dbg_macro = "warn"
clone_on_ref_ptr = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
self_named_module_files = "deny"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "deny"
todo = "warn"
try_err = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
use_debug = "warn"
arithmetic_side_effects = "warn"

unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
module_name_repetitions = "allow"
as_conversions = "deny"

# these lints rely on the lint reasons rfc
# https://github.com/rust-lang/rust/issues/54503
# and will become active once that is in stable.
# We should get ample warning with the nightly & beta
# ci builds if we need to change anything
allow_attributes_without_reason = "warn"
allow_attributes = "deny"

# This lint is temporarily disabled until an
# issue in how this is triggered from inside proptest.
# See https://github.com/rust-lang/rust-clippy/issues/15168 for more.
explicit_deref_methods = "allow"

[workspace.lints.rust]
# has current false-positives https://github.com/rust-lang/rust/issues/147648
unused_assignments = "allow"

[workspace.metadata.example_runner]
default = [
  { template = "balanced" },
  { template = "big_population" },
  { template = "many_generations" },
]

[workspace.metadata.example_runner.templates]
balanced.arguments = ["--max-generations", "10", "--population-size", "200"]
big_population.arguments = [
  "--max-generations",
  "1",
  "--population-size",
  "2000",
]
many_generations.arguments = [
  "--max-generations",
  "200",
  "--population-size",
  "10",
]
